/develop

0.3.0
    + Breaking change migration (impact=low).
        set.BoundMapping.Assignables() as a second argument.  You can set this argument to nil
        or pre-allocate a slice with same length as the fields argument.

    + set.BoundMapping
            + Add method Copy().
            + Add method Fields().
            + Breaking change: Assignables() (and Fields()) accept a
            pre-allocated slice as their second argument.
    
    + set.Mapper
            + Bug fix.  When iterating struct fields unexported (aka
            private) fields are implicitly ignored.  Previously they were
            adding to the mapping and could result in errors later when
            using Mapping or BoundMapping.
    
    + set.Mapping
            + Add field Keys.
            + Add field StructFields.
    
    + set.Value
            + Add method Copy().

0.2.3
    + Bug fix.  BoundMapping.Assignables() did not work as expected when attempting to Scan()
        results from a database query that returned NULL for columns even if the destination struct
        field was a pointer.  The error was the previous implementation always follows and instantiates
        pointers so the Scan() was receiving a *T when it required a **T.

    + Add feature.  Mapper.TreatAsScalar can be used to treat certain types as if they were
        scalars when generating mappings.

0.2.2
    + Add go.mod

0.2.1
    + No API changes.
    
0.2.0
    + Add Mapper, Mapping, BoundMapping
    + Add TypeInfo, TypeInfoCache
    + Add global TypeCache as an instance of TypeInfoCache.

0.1.2
    + Clean golint warnings; some small refactoring.

0.1.1
    + Refactoring and increase code coverage.

0.1.0
    + Add types:
        + Value - sets data to scalars, slices, and structs with type coercion if necessary.
        + Getter - acts as value lookup when filling structs.
        + Field - intermediate type for iterating struct fields.